fixed alignments and fixed links

--- a/bmw-car/special.html
+++ b/bmw-car/special.html
@@ -27,7 +27,7 @@
               <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                 <li class="nav-item">
-                    <a class="nav-link" href="../about-us/index.html">Home</a>
+                    <a class="nav-link" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -37,6 +37,7 @@
                       <li><a class="dropdown-item" href="index.html">Serien</a></li>
                       <li><a class="dropdown-item" href="engines.html">Motoren</a></li>
                       <li><a class="dropdown-item" href="x-models.html">X Modelle</a></li>
+                      <li><a class="dropdown-item" href="special.html">Sonderwagen</a></li>
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
@@ -82,7 +83,7 @@
               <img src="../photos/BMW_Vision_Neue_Klasse.jpg"style="border-top-left-radius: 5px;border-top-right-radius: 5px;max-height:273px;">
               <div class="card-body">
                 <h4 class="card-title"style =" margin-bottom:10px;color:White;">BMW Vision Neue Klasse</h4>
-                <p class="card-text" style="color:white">Der BMW Vision Neue Klasse ist eine Konzeptstudie, die BMWs Vision für die Zukunft der Elektromobilität verkörpert. Mit einem modernen, minimalistischen Design und innovativer Technologie setzt das Fahrzeug auf nachhaltige Materialien und eine neue, effiziente Batteriearchitektur. Der Vision Neue Klasse kombiniert hohe Reichweite mit fortschrittlichen Funktionen wie künstlicher Intelligenz und einem maßgeschneiderten Fahrerlebnis. Diese Studie zeigt, wie BMW Elektromobilität mit ästhetischem Anspruch und Verantwortung für die Umwelt vereint.</p>
+                <p class="card-text" style="color:white;margin-bottom:25px;">Der BMW Vision Neue Klasse ist eine Konzeptstudie, die BMWs Vision für die Zukunft der Elektromobilität verkörpert. Mit einem modernen, minimalistischen Design und innovativer Technologie setzt das Fahrzeug auf nachhaltige Materialien und eine neue, effiziente Batteriearchitektur. Der Vision Neue Klasse kombiniert hohe Reichweite mit fortschrittlichen Funktionen wie künstlicher Intelligenz und einem maßgeschneiderten Fahrerlebnis. Diese Studie zeigt, wie BMW Elektromobilität mit ästhetischem Anspruch und Verantwortung für die Umwelt vereint.</p>
               </div>
             </div>
           </div>
@@ -91,7 +92,7 @@
               <img src="../photos/BMW_vision_Neue_Klasse_X.jpg"style="border-top-left-radius: 5px;border-top-right-radius: 5px;max-height:273px;">
               <div class="card-body">
                 <h4 class="card-title"style =" margin-bottom:10px;color:White;">BMW Vision Neue Klasse X</h4>
-                <p class="card-text" style="color:white">Der BMW Vision Neue Klasse X ist eine Konzeptstudie für ein vollelektrisches SUV, das BMWs Vision für die Zukunft der Elektromobilität im SUV-Segment verkörpert. Mit einer modernen Batteriearchitektur bietet der Vision Neue Klasse X lange Reichweiten und schnelle Ladezeiten. Das Fahrzeug kombiniert sportliche Performance, digitale Innovationen und ein interaktives Fahrerlebnis, um eine nachhaltige und dynamische Zukunft des elektrischen Fahrens zu gestalten.</p>
+                <p class="card-text" style="color:white;margin-bottom:48px;">Der BMW Vision Neue Klasse X ist eine Konzeptstudie für ein vollelektrisches SUV, das BMWs Vision für die Zukunft der Elektromobilität im SUV-Segment verkörpert. Mit einer modernen Batteriearchitektur bietet der Vision Neue Klasse X lange Reichweiten und schnelle Ladezeiten. Das Fahrzeug kombiniert sportliche Performance, digitale Innovationen und ein interaktives Fahrerlebnis, um eine nachhaltige und dynamische Zukunft des elektrischen Fahrens zu gestalten.</p>
               </div>
             </div>
           </div>
@@ -109,7 +110,7 @@
               <img src="../photos/BMW_I_Vision_Dee.jpg"style="border-top-left-radius: 5px;border-top-right-radius: 5px;max-height:273px;">
               <div class="card-body">
                 <h4 class="card-title"style =" margin-bottom:10px;color:White;">BMW I Vision Dee</h4>
-                <p class="card-text" style="color:white">Der BMW i Vision Dee ist ein Konzeptfahrzeug, das eine neue Dimension der digitalen und vernetzten Mobilität präsentiert. Mit fortschrittlicher Künstlicher Intelligenz und anpassbaren, digitalen Benutzeroberflächen ermöglicht der i Vision Dee eine personalisierte und interaktive Fahrerfahrung. Das Fahrzeug bietet eine minimalistisches Design und setzt auf nachhaltige Materialien. BMW zeigt mit diesem Konzept, wie Technologie und Emotionen im Fahrzeug der Zukunft miteinander verschmelzen.</p>
+                <p class="card-text" style="color:white;margin-bottom:25px;">Der BMW i Vision Dee ist ein Konzeptfahrzeug, das eine neue Dimension der digitalen und vernetzten Mobilität präsentiert. Mit fortschrittlicher Künstlicher Intelligenz und anpassbaren, digitalen Benutzeroberflächen ermöglicht der i Vision Dee eine personalisierte und interaktive Fahrerfahrung. Das Fahrzeug bietet eine minimalistisches Design und setzt auf nachhaltige Materialien. BMW zeigt mit diesem Konzept, wie Technologie und Emotionen im Fahrzeug der Zukunft miteinander verschmelzen.</p>
               </div>
             </div>
           </div>
@@ -118,7 +119,7 @@
               <img src="../photos/bmw_i_vision_circular.jpg"style="border-top-left-radius: 5px;border-top-right-radius: 5px;max-height:263px;">
               <div class="card-body">
                 <h4 class="card-title"style =" margin-bottom:10px;color:White;">BMW I Vision Circular</h4>
-                <p class="card-text" style="color:white">Der BMW i Vision Circular ist ein Konzeptfahrzeug, das Nachhaltigkeit und Kreislaufwirtschaft in den Mittelpunkt stellt. Es verwendet recycelte und wiederverwendbare Materialien und setzt auf ein minimalistisches Design. Mit diesem Konzept zeigt BMW, wie die Automobilindustrie durch innovative Technologien und Ressourcenschonung eine nachhaltigere Zukunft gestalten kann.</p>
+                <p class="card-text" style="color:white;margin-bottom:48px;">Der BMW i Vision Circular ist ein Konzeptfahrzeug, das Nachhaltigkeit und Kreislaufwirtschaft in den Mittelpunkt stellt. Es verwendet recycelte und wiederverwendbare Materialien und setzt auf ein minimalistisches Design. Mit diesem Konzept zeigt BMW, wie die Automobilindustrie durch innovative Technologien und Ressourcenschonung eine nachhaltigere Zukunft gestalten kann.</p>
               </div>
             </div>
           </div>
