--- a/about-us/index.html
+++ b/about-us/index.html
@@ -35,7 +35,8 @@
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="../bmw-car/index.html">Serien</a></li>
                       <li><a class="dropdown-item" href="../bmw-car/engines.html">Motoren</a></li>
-                      <li><a class="dropdown-item" href="x-models.html">X Modelle</a></li>
+                      <li><a class="dropdown-item" href="../bmw-car/x-models.html">X Modelle</a></li>
+                      <li><a class="dropdown-item" href="../bmw-car/special.html">Sonderwagen</a></li>
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
