--- a/bmw-car/special.html
+++ b/bmw-car/special.html
@@ -50,7 +50,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../about-us/index.html">Über uns</a>
+                    <a class="nav-link" href="index.html">Über uns</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
