--- a/about-us/index.html
+++ b/about-us/index.html
@@ -66,7 +66,7 @@
                  style="background-color: #212529; border: 1px solid #1b1e22 !important;">
                 <div class="col p-4 d-flex flex-column position-static">
                     <h4 class="card-title"style =" margin-bottom:10px;">Arda Dönmez</h4>
-                    <p class="card-text" style = "font-weight:normal;">Arda ist der Teamleiter des Projekts und lebt mit 17 Jahren in Leonding. Er bringt umfangreiche Kenntnisse in Webentwicklung und Design mit und hat schon seit seiner Kindheit eine starke Vorliebe für BMWs. Seine Aufgabe ist es, die Startseite unserer Website zu erstellen und zu gestalten, wobei er besonderen Wert auf eine benutzerfreundliche und ansprechende Gestaltung legt. Arda sieht in BMWs ein Symbol für Prestige, Dynamik und sportliche Eleganz. Sein Traumwagen ist der BMW M3 G80 Competition, ein Modell, das seine Leidenschaft für leistungsstarke und stilvolle Fahrzeuge widerspiegelt. Mit seinen Fähigkeiten als Teamleiter und seiner Expertise im Webdesign ist Arda ein unverzichtbares Mitglied unseres Teams.</p>
+                    <p class="card-text" style = "font-weight:normal;">Arda, 17, aus Leonding, ist Teamleiter des Projekts und Experte in Webentwicklung und Design. Er gestaltet die Startseite der Website mit Fokus auf Benutzerfreundlichkeit und Ästhetik. Seit seiner Kindheit begeistert ihn BMW, für ihn ein Symbol von Prestige und Eleganz. Sein Traumwagen ist der BMW M3 G80 Competition. Mit seiner Führung und Expertise ist Arda ein zentraler Teil des Teams.</p>
                 </div>
                 <div class="col-auto d-none d-lg-block">
                     <img src="../photos/Doenmez_AboutUs.jpg" alt="Doenmez" width="200" height="250" style="object-fit: cover;">
@@ -79,7 +79,7 @@
                  style="background-color: #212529; border: 1px solid #1b1e22 !important;">
                  <div class="col p-4 d-flex flex-column position-static">
                   <h4 class="card-title"style =" margin-bottom:10px;">Kerimcan Yagci</h4>
-                  <p class="card-text" style = "font-weight:normal;">Kerimcan ist ein leidenschaftlicher BMW-Liebhaber seit seinem fünften Lebensjahr, da ihn die Begeisterung seiner Eltern für diese Marke schon in jungen Jahren geprägt hat. Er erstellt und gestaltet den BMW-Katalog, der von Limousinen und Coupés bis hin zu elektrischen Geländewagen reicht, und gibt einen Einblick in die verschiedenen, ikonischen Motoren von BMW, die für ihre beeindruckende Leistung bekannt sind. Kerimcan ist 15 Jahre alt, lebt in Haid und hat türkische Wurzeln. Sein Wissen und seine Fähigkeiten im Bereich BMW und Design sind für unser Team von großer Bedeutung und tragen wesentlich zum Erfolg unseres Projekts bei. Sein Traumwagen ist der BMW M5, der für ihn sowohl Luxus als auch Power widerspiegelt.</p>
+                  <p class="card-text" style = "font-weight:normal;">Kerimcan, 15, aus Haid mit türkischen Wurzeln, ist ein BMW-Liebhaber seit seiner Kindheit. Er erstellt den BMW-Katalog, der von Limousinen bis zu elektrischen Geländewagen reicht, und hebt die ikonischen Motoren hervor. Sein Traumwagen ist der BMW M5, ein Symbol für Luxus und Power. Mit seinem Wissen und Design-Talent ist er ein wichtiger Teil des Teams.</p>
               </div>
                 <div class="col-auto d-none d-lg-block">
                     <img src="../photos/Yagci_AboutUs.jpg" alt="Doenmez" width="200" height="250" style="object-fit: cover;">
@@ -93,7 +93,7 @@
                  style="background-color: #212529; border: 1px solid #1b1e22 !important;">
                  <div class="col p-4 d-flex flex-column position-static">
                   <h4 class="card-title"style =" margin-bottom:10px;">Daryan Mamsaleh</h4>
-                  <p class="card-text" style = "font-weight:normal;">Daryan ist 15 Jahre alt und besitzt eine brennende Begeisterung für BMW. Er erstellt die Informationsseite auf unserer Website, die nicht nur über BMW informiert, sondern auch die reiche Geschichte der Marke beleuchtet. Daryan lebt in Leonding und hat kurdische Wurzeln. Mit seinen beeindruckenden Webdesign-Künsten trägt er maßgeblich zur Gestaltung und Struktur unserer Seite bei. Sein Lieblingswagen ist der Rolls-Royce Phantom, da für ihn der unglaubliche Luxus dieses Fahrzeugs ausschlaggebend ist. Rolls-Royce gehört zum BMW-Konzern, was Daryans Leidenschaft für beide Marken weiter verstärkt.</p>
+                  <p class="card-text" style = "font-weight:normal;">Daryan, 15, aus Leonding mit kurdischen Wurzeln, begeistert sich für BMW und gestaltet die Informationsseite unserer Website, die auch die Geschichte der Marke beleuchtet. Sein Lieblingswagen ist der Rolls-Royce Phantom, ein Symbol für Luxus, das seine Leidenschaft für den BMW-Konzern verstärkt. Mit seinen Webdesign-Fähigkeiten ist Daryan ein wichtiger Teil des Teams.</p>
               </div>
                 <div class="col-auto d-none d-lg-block">
                     <img src="../photos/Mamsaleh_AboutUs.jpg" alt="Doenmez" width="200" height="250" style="object-fit: cover;">
@@ -106,7 +106,7 @@
                  style="background-color: #212529; border: 1px solid #1b1e22 !important;">
                  <div class="col p-4 d-flex flex-column position-static">
                   <h4 class="card-title"style =" margin-bottom:10px;">Rron Gashi</h4>
-                  <p class="card-text" style = "font-weight:normal;">Rron erstellt die 'About Us'-Seite, auf der er jedes Teammitglied vorstellt und deren Kontaktinformationen bereitstellt. Er sorgt dafür, dass die Seite sowohl informativ als auch ansprechend gestaltet ist, um den Besuchern einen klaren Überblick über das Team zu geben. Zusätzlich arbeitet er an der Sonderwagen-Seite, die sich noch in der Entwicklung befindet. Rron hat eine große Leidenschaft für BMWs, insbesondere den BMW i8. Ihn fasziniert die innovative Technik des Fahrzeugs und vor allem die Schmetterlingstüren, die dem Wagen nicht nur ein futuristisches Design verleihen, sondern auch praktisch sind. Mitseinem kreativen Talent in der Webentwicklung trägt Rron entscheidend zum Erfolg unseres Projekts bei.</p>
+                  <p class="card-text" style = "font-weight:normal;">Rron gestaltet die 'About Us'-Seite, auf der er das Team vorstellt und Kontaktinformationen bereitstellt, sowie die Sonderwagen-Seite, die noch in Entwicklung ist. Seine Leidenschaft gilt dem BMW i8, dessen innovative Technik und Schmetterlingstüren ihn faszinieren. Mit seinem kreativen Talent in der Webentwicklung ist Rron ein entscheidender Teil des Teams.</p>
               </div>
                 <div class="col-auto d-none d-lg-block">
                     <img src="../photos/Gashi_AboutUs.jpg" alt="Doenmez" width="200" height="250" style="object-fit: cover;">
