--- a/infos-bmw/map.html
+++ b/infos-bmw/map.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMW Markets and Museums Map</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnWaoXk_uJOc-cXy1Fn1CUpGsBepw0qLs"></script>
     <style>
         #map {
             height: 100vh;
