--- a/bmw-car/engines.html
+++ b/bmw-car/engines.html
@@ -7,12 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/cars.css">
-
 </head>
 <body>
-    <a href="../index.html">
-        <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
-    </a>
+    <div class="logo">
+        <img src="../photos/bmw_logo2.png" alt="BMW Logo">
+    </div>
     <div class="main">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
