changed the logo rotation

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         <img src="photos/bmw_logo.png" alt="BMW Logo">
     </div> 
 
-    <a href="../index.html">
-        <img class="logo" src="photos/bmw_logo2.png" alt="BMW Logo">
-    </a>
+    <img class="logo" src="photos/bmw_logo.png" alt="BMW Logo">
 
     <div class="main">
 
