changed the logo rotation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <img src="photos/bmw_logo.png" alt="BMW Logo">
     </div> 
 
-    <img class="logo" src="photos/bmw_logo.png" alt="BMW Logo">
+    <div class="image-container">
+    <img class="logo" src="photos/bmw_logo2.png" alt="BMW Logo">
+    </div>
 
     <div class="main">
 
