--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>BMW</title>
 </head>
-<body">
+<body>
 
     <div class="startAnimation">
         <img src="photos/bmw_logo.png" alt="BMW Logo">
