--- a/bmw-car/engines.html
+++ b/bmw-car/engines.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="../styles/cars.css">
 </head>
 <body>
-    <div class="logo">
-        <img src="../photos/bmw_logo2.png" alt="BMW Logo">
-    </div>
+<div class ="image-container">
+    <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
+</div>
     <div class="main">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
