--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     <div class="startAnimation">
         <img src="photos/bmw_logo.png" alt="BMW Logo">
-    </div> 
-
-    <div class="image-container">
-    <img class="logo" src="photos/bmw_logo2.png" alt="BMW Logo">
     </div>
+
+    <a href="../index.html">
+        <img class="logo" src="photos/bmw_logo2.png" alt="BMW Logo">
+    </a>
 
     <div class="main">
 
