--- a/infos-bmw/history.html
+++ b/infos-bmw/history.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMW Marken</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/loadingAnimation.css">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/infos.css">
     <link rel="stylesheet" href="../styles/card.css">
 </head>
 <body>
-<a href="../index.html">
+<div class ="image-container">
     <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
-</a>
+</div>
 <div class="main">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
