added environment section in sustainability.html

--- a/infos-bmw/sustainability.html
+++ b/infos-bmw/sustainability.html
@@ -59,6 +59,27 @@
         </div>
     </nav>
 </div>
+
+<main class="brands-container">
+    <div class="card" style="width: 100rem; height: 45rem;">
+        <img src="../photos/bmw-environment.jpeg" id="bmw-image" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">BMW und die Umwelt</h5>
+            <p class="card-text">BMW setzt sich aktiv für den Schutz der Umwelt ein und verfolgt das Ziel, bis 2030 klimaneutral zu werden. Dabei stehen Innovation und Verantwortung im Mittelpunkt.</p>
+            <strong>Highlights:</strong>
+            <ul>
+                <li>Klimaneutralität bis 2030.</li>
+                <li>100% erneuerbare Energien in Produktionsstätten.</li>
+                <li>Fokus auf ressourcenschonende Fertigung.</li>
+            </ul>
+
+            <strong><p class="card-text">"Nachhaltigkeit und wirtschaftlicher Erfolg gehen bei der BMW Group Hand in Hand. Denn gerade als Premiumhersteller haben wir den Anspruch, beim Thema Nachhaltigkeit voranzugehen."</strong>
+            <p class="card-text" id="smallerfontsize">-Oliver Zipse (Vorsitzender des Vorstands der BMW AG)</p>
+
+            <a href="https://www.bmwgroup.com/de/nachhaltigkeit.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+        </div>
+    </div>
+</main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
