added circular economy section in sustainability.html

--- a/infos-bmw/sustainability.html
+++ b/infos-bmw/sustainability.html
@@ -72,11 +72,24 @@
                 <li>100% erneuerbare Energien in Produktionsstätten.</li>
                 <li>Fokus auf ressourcenschonende Fertigung.</li>
             </ul>
-
+            <br>
             <strong><p class="card-text">"Nachhaltigkeit und wirtschaftlicher Erfolg gehen bei der BMW Group Hand in Hand. Denn gerade als Premiumhersteller haben wir den Anspruch, beim Thema Nachhaltigkeit voranzugehen."</strong>
             <p class="card-text" id="smallerfontsize">-Oliver Zipse (Vorsitzender des Vorstands der BMW AG)</p>
 
             <a href="https://www.bmwgroup.com/de/nachhaltigkeit.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+        </div>
+    </div>
+
+    <div class="card" style="width: 45rem; height: 35rem;">
+        <img src="../photos/bmw-kreislaufwirtschaft.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Kreislaufwirtschaft</h5>
+            <p class="card-text">BMW setzt auf Recycling und die Wiederverwendung von Materialien, um Ressourcen zu schonen und Abfall zu minimieren.</p>
+            <ul>
+                <li>Verwendung von recycelten Materialien in Fahrzeugen.</li>
+                <li>Optimierung der Lieferketten für nachhaltige Prozesse.</li>
+            </ul>
+            <a href="https://www.bmwgroup.com/de/nachhaltigkeit/kreislaufwirtschaft.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
         </div>
     </div>
 </main>
