--- a/infos-bmw/sustainability.html
+++ b/infos-bmw/sustainability.html
@@ -92,6 +92,19 @@
             <a href="https://www.bmwgroup.com/de/nachhaltigkeit/kreislaufwirtschaft.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
         </div>
     </div>
+
+    <div class="card" style="width: 45rem; height: 35rem;">
+        <img src="../photos/bmw-socialresponsibilities.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Soziale Verantwortungen</h5>
+            <p class="card-text">en ökologischen Aspekten engagiert sich BMW in sozialen Projekten weltweit. Das Unternehmen fördert Bildung, Kultur und Gleichberechtigung</p>
+            <ul>
+                <li>Förderung von Bildungsprogrammen für benachteiligte Gruppen.</li>
+                <li>Unterstützung globaler Gleichstellungsinitiativen.</li>
+            </ul>
+            <a href="https://www.bmwgroup.com/de/nachhaltigkeit/kreislaufwirtschaft.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+        </div>
+    </div>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
