Link new Page sustainability.html to all nav bars #13

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
                       Infos
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="./infos-bmw/history.html">Geschichte</a></li>
-                      <li><a class="dropdown-item" href="./infos-bmw/index.html">Marken</a></li>
+                      <li><a class="dropdown-item" href="infos-bmw/history.html">Geschichte</a></li>
+                      <li><a class="dropdown-item" href="infos-bmw/index.html">Marken</a></li>
+                      <li><a class="dropdown-item" href="infos-bmw/sustainability.html">Sustainability</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -127,7 +128,7 @@
             <div class="carousel-item">
                 <video class="d-block w-100" src="./photos/BMWOffroad.mp4" autoplay muted loop></video>
                 <div class="carousel-caption d-md-block">
-                    <h1>Offraod</h1>
+                    <h1>Offroad</h1>
                     <div class="text-content">
                         <a class="btn btn-primary" href="https://www.bmw.com/de/freude/rebelle-rally-im-bmw-x2-durchs-offroad-abenteuer-nur-fuer-frauen.html" target="_blank" role="button">Mehr erfahren</a>
                     </div>
