--- a/bmw-car/index.html
+++ b/bmw-car/index.html
@@ -30,8 +30,9 @@
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="index.html">Serien</a></li>
                       <li><a class="dropdown-item" href="engines.html">Motoren</a></li>
-                      <li><a class="dropdown-item" href="x-models.html">X Modelle</a></li>
-                      <li><a class="dropdown-item" href="special.html">Sonderwagen</a></li>
+                      <li><a class="dropdown-item" href="x-models.html">X-Modelle</a></li>
+                        <li><a class="dropdown-item" href="e-models.html">E-Modelle</a></li>
+                        <li><a class="dropdown-item" href="special.html">Sonderwagen</a></li>
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
