added new links fromm new pages

--- a/infos-bmw/history.html
+++ b/infos-bmw/history.html
@@ -29,10 +29,11 @@
                             Autos
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="../bmw-car/index.html">Serien</a></li>
-                            <li><a class="dropdown-item" href="../bmw-car/engines.html">Motoren</a></li>
-                            <li><a class="dropdown-item" href="../bmw-car/x-models.html">X Modelle</a></li>
-                            <li><a class="dropdown-item" href="../bmw-car/special.html">Sonderwagen</a></li>
+                            <li><a class="dropdown-item" href="index.html">Serien</a></li>
+                            <li><a class="dropdown-item" href="engines.html">Motoren</a></li>
+                            <li><a class="dropdown-item" href="x-models.html">X-Modelle</a></li>
+                            <li><a class="dropdown-item" href="e-models.html">E-Modelle</a></li>
+                            <li><a class="dropdown-item" href="special.html">Sonderwagen</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -42,6 +43,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../infos-bmw/history.html">Geschichte</a></li>
                             <li><a class="dropdown-item" href="../infos-bmw/index.html">Marken</a></li>
+                            <li><a class="dropdown-item" href="../infos-bmw/sustainability.html">Sustainability</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
