--- a/about-us/index.html
+++ b/about-us/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="../styles/aboutUs.css">
 </head>
 <body>
-    <a href="../index.html">
-        <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
-    </a>
+  <div class ="image-container">
+    <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
+</div>
     <div class="main">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -42,6 +42,7 @@
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="../infos-bmw/history.html">Geschichte</a></li>
                       <li><a class="dropdown-item" href="../infos-bmw/index.html">Marken</a></li>
+                      <li><a class="dropdown-item" href="../infos-bmw/sustainability.html">Sustainability</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
