changed e-models.html and finished it

--- a/bmw-car/e-models.html
+++ b/bmw-car/e-models.html
@@ -12,6 +12,12 @@
 <div class ="image-container">
     <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
 </div>
+<div class ="image-container">
+    <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
+</div>
+<div class ="image-container">
+    <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
+</div>
 <div class="main">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -30,15 +36,33 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="index.html">Serien</a></li>
                             <li><a class="dropdown-item" href="engines.html">Motoren</a></li>
-                            <li><a class="dropdown-item" href="e-models.html">i Modelle</a></li>
+                            <li><a class="dropdown-item" href="x-models.html">X Modelle</a></li>
                             <li><a class="dropdown-item" href="special.html">Sonderwagen</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="../bmw-car/index.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Infos
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="../infos-bmw/history.html">Geschichte</a></li>
+                            <li><a class="dropdown-item" href="../infos-bmw/index.html">Marken</a></li>
+                            <li><a class="dropdown-item" href="../infos-bmw/sustainability.html">Sustainability</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../about-us/index.html">Über uns</a>
+                    </li>
                 </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
             </div>
         </div>
     </nav>
 </div>
+
 <main class="py-5">
     <div class="container">
         <div class="row g-4">
@@ -47,8 +71,8 @@
                     <img src="../photos/i1-bmw.jpg" class="card-img-top" alt="BMW i1">
                     <div class="card-body">
                         <h5 class="card-title">BMW i1</h5>
-                        <p class="card-text">Der kompakte Einstieg in die vollelektrische Welt von BMW.</p>
-                        <a href="#" target="_blank" class="btn btn-outline-light btn-sm">Mehr erfahren</a>
+                        <p class="card-text"> Der BMW i1 ist der ideale Einstieg in die vollelektrische BMW Welt – kompakt, effizient und alltagstauglich, mit nachhaltiger Mobilität und typisch dynamischem Fahrspaß.</p>
+                        <a href="https://www.bmw.at/de/all-models/bmw-i/iX1/2022/bmw-iX1.html" target="_blank" class="btn btn-outline-light btn-sm">Mehr erfahren</a>
                     </div>
                 </div>
             </div>
@@ -57,8 +81,8 @@
                     <img src="../photos/i2-bmw.jpg" class="card-img-top" alt="BMW i2">
                     <div class="card-body">
                         <h5 class="card-title">BMW i2</h5>
-                        <p class="card-text">Ein dynamisches Elektrofahrzeug für den urbanen Lifestyle.</p>
-                        <a href="#" target="_blank" class="btn btn-outline-light btn-sm">Mehr erfahren</a>
+                        <p class="card-text">Der BMW i2 ist ein dynamisches Elektrofahrzeug, das ideal für den urbanen Lifestyle geeignet ist. Mit seiner sportlichen Performance und modernen Technologie bietet er eine nachhaltige Lösung für den täglichen Stadtverkehr.</p>
+                        <a href="https://www.bmw.at/de/all-models/bmw-i/iX1/2022/bmw-iX2.html" target="_blank" class="btn btn-outline-light btn-sm">Mehr erfahren</a>
                     </div>
                 </div>
             </div>
@@ -67,8 +91,8 @@
                     <img src="../photos/i3-bmw.jpg" class="card-img-top" alt="BMW i3">
                     <div class="card-body">
                         <h5 class="card-title">BMW i3</h5>
-                        <p class="card-text">Der revolutionäre Kleinwagen mit nachhaltigem Konzept.</p>
-                        <a href="#" target="_blank" class="btn btn-outline-light btn-sm">Mehr erfahren</a>
+                        <p class="card-text">Der BMW i3 ist ein revolutionärer Kleinwagen, der mit seinem nachhaltigen Konzept neue Maßstäbe setzt. Mit innovativer Technik und umweltfreundlichen Materialien bietet er eine zukunftsorientierte Lösung für die urbane Mobilität.</p>
+                        <a href="https://www.bmw.at/de/all-models/bmw-i/iX1/2022/bmw-iX3.html" target="_blank" class="btn btn-outline-light btn-sm">Mehr erfahren</a>
                     </div>
                 </div>
             </div>
@@ -77,8 +101,8 @@
                     <img src="../photos/i4-bmw.jpg" class="card-img-top" alt="BMW i4">
                     <div class="card-body">
                         <h5 class="card-title">BMW i4</h5>
-                        <p class="card-text">Die vollelektrische Sportlimousine mit beeindruckender Leistung.</p>
-                        <a href="#" target="_blank" class="btn btn-outline-light btn-sm">Mehr erfahren</a>
+                        <p class="card-text">Der BMW i4 ist eine vollelektrische Sportlimousine, die mit beeindruckender Leistung und dynamischem Design überzeugt. Er kombiniert nachhaltige Mobilität mit der Fahrdynamik, die man von BMW erwartet, und bietet so ein einzigartiges Fahrerlebnis.</p>
+                        <a href="https://www.bmw.at/de/all-models/bmw-i/iX1/2022/bmw-iX4.html" target="_blank" class="btn btn-outline-light btn-sm">Mehr erfahren</a>
                     </div>
                 </div>
             </div>
@@ -87,8 +111,8 @@
                     <img src="../photos/i5-bmw.jpg" class="card-img-top" alt="BMW i5">
                     <div class="card-body">
                         <h5 class="card-title">BMW i5</h5>
-                        <p class="card-text">Fortschrittliche Technologie trifft luxuriöse Eleganz.</p>
-                        <a href="#" target="_blank" class="btn btn-outline-light btn-sm">Mehr erfahren</a>
+                        <p class="card-text">Der BMW i5 vereint fortschrittliche Technologie mit luxuriöser Eleganz. Mit seinem modernen Design, innovativen Features und herausragendem Komfort bietet er eine perfekte Mischung aus Nachhaltigkeit und Premium-Erlebnis.</p>
+                        <a href="https://www.bmw.at/de/all-models/bmw-i/iX1/2022/bmw-iX5.html" target="_blank" class="btn btn-outline-light btn-sm">Mehr erfahren</a>
                     </div>
                 </div>
             </div>
@@ -97,8 +121,8 @@
                     <img src="../photos/i6-bmw.jpg" class="card-img-top" alt="BMW i6">
                     <div class="card-body">
                         <h5 class="card-title">BMW i6</h5>
-                        <p class="card-text">Ein luxuriöses Elektro-Coupé mit innovativer Technik.</p>
-                        <a href="#" target="_blank" class="btn btn-outline-light btn-sm">Mehr erfahren</a>
+                        <p class="card-text">Der BMW i6 ist ein luxuriöses Elektro-Coupé, das innovative Technik mit beeindruckendem Design kombiniert. Mit seiner starken Performance und fortschrittlichen Ausstattung bietet er ein exklusives Fahrerlebnis auf höchstem Niveau.</p>
+                        <a href="https://www.bmw.at/de/all-models/bmw-i/iX1/2022/bmw-iX6.html" target="_blank" class="btn btn-outline-light btn-sm">Mehr erfahren</a>
                     </div>
                 </div>
             </div>
@@ -107,8 +131,8 @@
                     <img src="../photos/i7-bmw.jpg" class="card-img-top" alt="BMW i7">
                     <div class="card-body">
                         <h5 class="card-title">BMW i7</h5>
-                        <p class="card-text">Das vollelektrische Flaggschiff mit maximalem Komfort.</p>
-                        <a href="#" target="_blank" class="btn btn-outline-light btn-sm">Mehr erfahren</a>
+                        <p class="card-text">Der BMW i7 ist das vollelektrische Flaggschiff der Marke, das maximalen Komfort mit fortschrittlicher Technologie vereint. Er bietet luxuriöse Ausstattung, herausragende Fahrdynamik und eine zukunftsweisende Elektro-Performance für ein unvergleichliches Fahrerlebnis.</p>
+                        <a href="https://www.bmw.at/de/all-models/bmw-i/iX1/2022/bmw-iX7.html" target="_blank" class="btn btn-outline-light btn-sm">Mehr erfahren</a>
                     </div>
                 </div>
             </div>
@@ -117,8 +141,8 @@
                     <img src="../photos/i8-bmw.jpg" class="card-img-top" alt="BMW i8">
                     <div class="card-body">
                         <h5 class="card-title">BMW i8</h5>
-                        <p class="card-text">Der ikonische Plug-in-Hybrid-Sportwagen von BMW.</p>
-                        <a href="#" target="_blank" class="btn btn-outline-light btn-sm">Mehr erfahren</a>
+                        <p class="card-text">Der BMW i8 ist der ikonische Plug-in-Hybrid-Sportwagen von BMW. Mit seinem futuristischen Design, beeindruckender Leistung und einer einzigartigen Kombination aus Elektro- und Verbrennungsmotor bietet er ein außergewöhnliches Fahrerlebnis, das Nachhaltigkeit und Sportlichkeit vereint.</p>
+                        <a href="https://www.bmw.at/de/all-models/bmw-i/iX1/2022/bmw-iX8.html" target="_blank" class="btn btn-outline-light btn-sm">Mehr erfahren</a>
                     </div>
                 </div>
             </div>
