--- a/infos-bmw/sustainability.html
+++ b/infos-bmw/sustainability.html
@@ -31,11 +31,11 @@
                             Autos
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="index.html">Serien</a></li>
-                            <li><a class="dropdown-item" href="engines.html">Motoren</a></li>
-                            <li><a class="dropdown-item" href="x-models.html">X-Modelle</a></li>
-                            <li><a class="dropdown-item" href="e-models.html">E-Modelle</a></li>
-                            <li><a class="dropdown-item" href="special.html">Sonderwagen</a></li>
+                            <li><a class="dropdown-item" href="../bmw-car/index.html">Serien</a></li>
+                            <li><a class="dropdown-item" href="../bmw-car/engines.html">Motoren</a></li>
+                            <li><a class="dropdown-item" href="../bmw-car/x-models.html">X-Modelle</a></li>
+                            <li><a class="dropdown-item" href="../bmw-car/e-models.html">E-Modelle</a></li>
+                            <li><a class="dropdown-item" href="../bmw-car/special.html">Sonderwagen</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
