--- a/infos-bmw/map.html
+++ b/infos-bmw/map.html
@@ -70,7 +70,18 @@
             { name: "BMW Markt Genf", position: { lat: 46.204391, lng: 6.143158 } },
             { name: "BMW Markt Mailand", position: { lat: 45.464664, lng: 9.188540 } },
             { name: "BMW Markt Paris", position: { lat: 48.856613, lng: 2.352222 } },
-            { name: "BMW Markt London", position: { lat: 51.507351, lng: -0.127758 } }
+            { name: "BMW Markt London", position: { lat: 51.507351, lng: -0.127758 } },
+            { name: "BMW Markt Los Angeles", position: { lat: 34.052235, lng: -118.243683 } },
+            { name: "BMW Markt Toronto", position: { lat: 43.651070, lng: -79.347015 } },
+            { name: "BMW Markt Seoul", position: { lat: 37.566536, lng: 126.977966 } },
+            { name: "BMW Markt Shanghai", position: { lat: 31.230391, lng: 121.473701 } },
+            { name: "BMW Markt Peking", position: { lat: 39.904202, lng: 116.407394 } },
+            { name: "BMW Markt Barcelona", position: { lat: 41.385063, lng: 2.173404 } },
+            { name: "BMW Markt Brüssel", position: { lat: 50.850346, lng: 4.351721 } },
+            { name: "BMW Markt Johannesburg", position: { lat: -26.204103, lng: 28.047304 } },
+            { name: "BMW Markt Mexiko-Stadt", position: { lat: 19.432608, lng: -99.133209 } },
+            { name: "BMW Markt Singapur", position: { lat: 1.352083, lng: 103.819839 } }
+
         ];
 
         markets.forEach(market => {
