more museums added. Map basically finished

--- a/infos-bmw/map.html
+++ b/infos-bmw/map.html
@@ -105,7 +105,17 @@
             { name: "BMW Museum Tokyo", position: { lat: 35.689487, lng: 139.691711 }, url: "https://www.bmw.co.jp" },
             { name: "BMW Museum Dubai", position: { lat: 25.204849, lng: 55.270783 }, url: "https://www.bmw-dubai.com" },
             { name: "BMW Museum Sydney", position: { lat: -33.868820, lng: 151.209296 }, url: "https://www.bmw.com.au" },
-            { name: "BMW Museum São Paulo", position: { lat: -23.550520, lng: -46.633308 }, url: "https://www.bmw.com.br" }
+            { name: "BMW Museum São Paulo", position: { lat: -23.550520, lng: -46.633308 }, url: "https://www.bmw.com.br" },
+            { name: "BMW Museum London", position: { lat: 51.507351, lng: -0.127758 }, url: "https://www.bmw.co.uk" },
+            { name: "BMW Museum Paris", position: { lat: 48.856613, lng: 2.352222 }, url: "https://www.bmw.fr" },
+            { name: "BMW Museum Milan", position: { lat: 45.464664, lng: 9.188540 }, url: "https://www.bmw.it" },
+            { name: "BMW Museum Toronto", position: { lat: 43.651070, lng: -79.347015 }, url: "https://www.bmw.ca" },
+            { name: "BMW Museum Seoul", position: { lat: 37.566536, lng: 126.977966 }, url: "https://www.bmw.co.kr" },
+            { name: "BMW Museum Shanghai", position: { lat: 31.230391, lng: 121.473701 }, url: "https://www.bmw.com.cn" },
+            { name: "BMW Museum Johannesburg", position: { lat: -26.204103, lng: 28.047304 }, url: "https://www.bmw.co.za" },
+            { name: "BMW Museum Mexico City", position: { lat: 19.432608, lng: -99.133209 }, url: "https://www.bmw.com.mx" },
+            { name: "BMW Museum Singapore", position: { lat: 1.352083, lng: 103.819839 }, url: "https://www.bmw.com.sg" },
+            { name: "BMW Museum Vienna", position: { lat: 48.208176, lng: 16.373819 }, url: "https://www.bmw.at" }
         ];
 
         museums.forEach(museum => {
