--- a/infos-bmw/cooperation.html
+++ b/infos-bmw/cooperation.html
@@ -46,8 +46,6 @@
               <li><a class="dropdown-item" href="../infos-bmw/sustainability.html">Sustainability</a></li>
               <li><a class="dropdown-item" href="../infos-bmw/cooperation.html">Kooperationen</a></li>
               <li><a class="dropdown-item" href="../infos-bmw/map.html">Unsere Standorte</a></li>
-
-
             </ul>
           </li>
           <li class="nav-item">
@@ -64,7 +62,14 @@
 </div>
 
 <main class="brands-container">
-
+  <div class="card" style="width: 40rem; height: 35rem;">
+    <img src="../photos/bmw-toyota.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Toyota Motor Corperation</h5>
+      <p class="card-text">BMW und Toyota pflegen eine strategische Partnerschaft, bei der sie gemeinsam an Wasserstoff-Brennstoffzellentechnologie arbeiten und Fahrzeuge wie den BMW Z4 und den Toyota Supra auf einer gemeinsamen Plattform entwickelt haben.</p>
+      <a href="https://www.press.bmwgroup.com/deutschland/article/detail/T0444790DE/wasserstoff-pioniere:-die-bmw-group-und-die-toyota-motor-corporation-vertiefen-ihre-zusammenarbeit-fuer-brennstoffzellen-fahrzeuge-fcev-im-pkw-bereich?language=de" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+    </div>
+  </div>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
