fixed bad coding

--- a/infos-bmw/map.html
+++ b/infos-bmw/map.html
@@ -5,33 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMW Markets and Museums Map</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnWaoXk_uJOc-cXy1Fn1CUpGsBepw0qLs"></script>
-    <style>
-        #map {
-            height: 100vh;
-            width: 100%;
-        }
-        .legend {
-            background: white;
-            padding: 10px;
-            margin: 10px;
-            border: 1px solid black;
-            border-radius: 5px;
-            font-family: Arial, sans-serif;
-        }
-        .legend div {
-            margin-bottom: 5px;
-        }
-        .legend .color-box {
-            display: inline-block;
-            width: 20px;
-            height: 20px;
-            margin-right: 10px;
-        }
-        .dark-mode {
-            background-color: #181818;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="../styles/map.css">
 </head>
 <body>
 <div id="map"></div>
