--- a/infos-bmw/cooperation.html
+++ b/infos-bmw/cooperation.html
@@ -70,6 +70,15 @@
       <a href="https://www.press.bmwgroup.com/deutschland/article/detail/T0444790DE/wasserstoff-pioniere:-die-bmw-group-und-die-toyota-motor-corporation-vertiefen-ihre-zusammenarbeit-fuer-brennstoffzellen-fahrzeuge-fcev-im-pkw-bereich?language=de" target="_blank" class="btn btn-primary">Mehr erfahren</a>
     </div>
   </div>
+  <div class="card" style="width: 40rem; height: 35rem;">
+    <img src="../photos/bmw-brillianceGroup.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Brilliance Auto Group</h5>
+      <p class="card-text">In China arbeitet BMW mit der Brilliance Auto Group im Joint Venture „BMW Brilliance Automotive“ zusammen. Dieses Unternehmen produziert BMW-Modelle für den chinesischen Markt und betreibt große Werke in Shenyang.</p>
+      <a href="https://www.press.bmwgroup.com/deutschland/article/detail/T0444790DE/wasserstoff-pioniere:-die-bmw-group-und-die-toyota-motor-corporation-vertiefen-ihre-zusammenarbeit-fuer-brennstoffzellen-fahrzeuge-fcev-im-pkw-bereich?language=de" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+    </div>
+  </div>
+
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
