--- a/bmw-car/index.html
+++ b/bmw-car/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../styles/cars.css">
 </head>
 <body>
-    <div class ="image-container">
+    <div class="image-container">
         <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
     </div>
     <div class="main">
@@ -49,21 +49,23 @@
                     <a class="nav-link" href="../about-us/index.html">Über uns</a>
                   </li>
                 </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <!-- Suchformular -->
+                <form class="d-flex" id="searchForm" role="search">
+                  <input id="searchInput" class="form-control me-2" type="search" placeholder="Suche nach Modellen..." aria-label="Search">
                   <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+                <div id="resultsContainer" class="mt-3"></div> <!-- Container für Suchergebnisse -->
               </div>
             </div>
-          </nav>
           </nav>
     </div>
 
     <main>
         <div class="container">
             <div class="row g-4">
+                <!-- Karte für BMW 1er Serie -->
                 <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="card bg-dark text-white h-100">
+                    <div class="card bg-dark text-white h-100" data-index="BMW 1er Serie">
                         <img src="../photos/1er-bmw.jpg" class="card-img-top" alt="BMW 1 Series">
                         <div class="card-body">
                             <h5 class="card-title">BMW 1er Serie</h5>
@@ -72,8 +74,10 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Karte für BMW 2er Serie -->
                 <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="card bg-dark text-white h-100">
+                    <div class="card bg-dark text-white h-100" data-index="BMW 2er Serie">
                         <img src="../photos/2er-bmw.jpg" class="card-img-top" alt="BMW 2 Series">
                         <div class="card-body">
                             <h5 class="card-title">BMW 2er Serie</h5>
@@ -82,8 +86,10 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Karte für BMW 3er Serie -->
                 <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="card bg-dark text-white h-100">
+                    <div class="card bg-dark text-white h-100" data-index="BMW 3er Serie">
                         <img src="../photos/3er-bmw.jpg" class="card-img-top" alt="BMW 3 Series">
                         <div class="card-body">
                             <h5 class="card-title">BMW 3er Serie</h5>
@@ -92,8 +98,10 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Karte für BMW 4er Serie -->
                 <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="card bg-dark text-white h-100">
+                    <div class="card bg-dark text-white h-100" data-index="BMW 4er Serie">
                         <img src="../photos/4er-bmw.jpg" class="card-img-top" alt="BMW 4 Series">
                         <div class="card-body">
                             <h5 class="card-title">BMW 4er Serie</h5>
@@ -102,8 +110,10 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Karte für BMW 5er Serie -->
                 <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="card bg-dark text-white h-100">
+                    <div class="card bg-dark text-white h-100" data-index="BMW 5er Serie">
                         <img src="../photos/5er-bmw.jpg" class="card-img-top" alt="BMW 5 Series">
                         <div class="card-body">
                             <h5 class="card-title">BMW 5er Serie</h5>
@@ -112,8 +122,10 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Karte für BMW 6er Serie -->
                 <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="card bg-dark text-white h-100">
+                    <div class="card bg-dark text-white h-100" data-index="BMW 6er Serie">
                         <img src="../photos/6er-bmw.jpg" class="card-img-top" alt="BMW 6 Series">
                         <div class="card-body">
                             <h5 class="card-title">BMW 6er Serie</h5>
@@ -122,8 +134,10 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Karte für BMW 7er Serie -->
                 <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="card bg-dark text-white h-100">
+                    <div class="card bg-dark text-white h-100" data-index="BMW 7er Serie">
                         <img src="../photos/7er-bmw.jpg" class="card-img-top" alt="BMW 7 Series">
                         <div class="card-body">
                             <h5 class="card-title">BMW 7er Serie</h5>
@@ -132,8 +146,10 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Karte für BMW 8er Serie -->
                 <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="card bg-dark text-white h-100">
+                    <div class="card bg-dark text-white h-100" data-index="BMW 8er Serie">
                         <img src="../photos/8er-bmw.jpg" class="card-img-top" alt="BMW 8 Series">
                         <div class="card-body">
                             <h5 class="card-title">BMW 8er Serie</h5>
@@ -147,5 +163,7 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../scripts/pages.json"></script> <!-- Lade das JSON mit Seiteninhalten -->
+    <script src="../scripts/search.js"></script> <!-- Dein Suchscript -->
 </body>
 </html>
