--- a/infos-bmw/cooperation.html
+++ b/infos-bmw/cooperation.html
@@ -83,7 +83,7 @@
     <div class="card-body">
       <h5 class="card-title">Magna Steyr</h5>
       <p class="card-text">Der österreichische Zulieferer und Auftragsfertiger Magna Steyr produziert Fahrzeuge für BMW, darunter den 5er, und liefert auch wichtige Komponenten wie Antriebssysteme. Die Partnerschaft bietet BMW flexible Produktionskapazitäten außerhalb der eigenen Werke.</p>
-      <a href="https://www.press.bmwgroup.com/deutschland/article/detail/T0444790DE/wasserstoff-pioniere:-die-bmw-group-und-die-toyota-motor-corporation-vertiefen-ihre-zusammenarbeit-fuer-brennstoffzellen-fahrzeuge-fcev-im-pkw-bereich?language=de" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+      <a href="https://www.bmwgroup-werke.com/steyr/de.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
     </div>
   </div>
 
