--- a/infos-bmw/index.html
+++ b/infos-bmw/index.html
@@ -44,6 +44,8 @@
                             <li><a class="dropdown-item" href="../infos-bmw/history.html">Geschichte</a></li>
                             <li><a class="dropdown-item" href="../infos-bmw/index.html">Marken</a></li>
                             <li><a class="dropdown-item" href="../infos-bmw/sustainability.html">Sustainability</a></li>
+                            <li><a class="dropdown-item" href="../infos-bmw/cooperation.html">Kooperationen</a></li>
+                            <li><a class="dropdown-item" href="../infos-bmw/map.html">Unsere Standorte</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
