--- a/bmw-car/e-models.html
+++ b/bmw-car/e-models.html
@@ -64,6 +64,8 @@
     </nav>
 </div>
 
+<div class="container" id="search-results"></div>
+
 <main class="py-5">
     <div class="container">
         <div class="row g-4">
@@ -150,6 +152,8 @@
         </div>
     </div>
 </main>
+
+<script src="../scripts/search.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
